# Valdi

./: .bazelrc  .gitattributes  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  README.zh-CN.md  WORKSPACE.bzlmod  fossa-deps.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: documentation.md
.github/actions/bazel-cache/: action.yml
.github/workflows/: README.md  bzl-changes.yml  comment-test-results.yml  pr-size-labeler.yml  publish-npm.yml  release-test.yml  test-cli-linux.yml  welcome.yml
ai-skills/: CONTRIBUTING_SKILLS.md  registry.json
ai-skills/skills/valdi-component-tests/tests/: BUILD.bazel  README.md
ai-skills/skills/valdi-component-tests/tests/src/: ProfileCard.tsx
ai-skills/skills/valdi-component-tests/tests/test/: ProfileCardTest.spec.tsx
ai-skills/skills/valdi-migrate/tests/: .gitignore  BUILD.bazel  README.md  check_antipatterns.py  compose_example.kt  flutter_example.dart  react_example.tsx  tsconfig.json
ai-skills/skills/valdi-migrate/tests/src/: expected_valdi.tsx
ai-skills/skills/valdi-perf/tests/: BUILD.bazel  README.md
ai-skills/skills/valdi-perf/tests/src/: reference.tsx
apps/benchmark/src/ios/: BUILD.bazel
apps/helloworld/: BUILD.bazel
apps/helloworld/src/ios/: BUILD.bazel
apps/helloworld/src/valdi/hello_world/: BUILD.bazel
apps/helloworld/src/valdi/hello_world/src/: HelloWorldApp.tsx
apps/helloworld/src/valdi/hello_world/web/: CppModule.ts  NativeModule.ts  tsconfig.json
apps/inline_text_children_example/: BUILD.bazel  InlineTextChildrenExample.tsx
apps/text_animation_group_example/: BUILD.bazel  TextAnimationGroupExample.tsx
apps/text_attributes_example/: BUILD.bazel  TextAttributesExample.tsx
apps/text_rendering_showcase/: BUILD.bazel  TextRenderingShowcase.tsx
apps/webview_example/: BUILD.bazel  IconButton.tsx  WebViewExample.tsx
bzl/: additional_dependencies.bzl  client_objc_library.bzl  dependencies.bzl  nested_repository.bzl  prebuilt_tools.bzl  valdi_compiler_repos_extension.bzl  valdi_compiler_swift_deps.bzl  workspace_init.bzl  workspace_postinit.bzl  workspace_rust_init.bzl
bzl/android/: ndk_tools.bzl  package_aar.bzl  platform_transition.bzl
bzl/ide/: open_source.bazelproject
bzl/macros/: android.bzl
bzl/toolchains/: BUILD.bazel  MODULE.bazel
bzl/valdi/: BUILD.bazel  common.bzl  empty_android_manifest.xml  package.json.tmpl  valdi_android_application.bzl  valdi_android_application_icons.bzl  valdi_android_resource_deps.bzl  valdi_application.bzl  valdi_application_icons.bzl  valdi_collapse_web_paths.bzl  valdi_compilation_metadata.bzl  valdi_compiled.bzl  valdi_config.yaml.tpl  valdi_exported_library.bzl  valdi_ios_application.bzl  valdi_macos_application.bzl  valdi_module.bzl  valdi_projectsync.bzl  valdi_protodecl_to_js.bzl  valdi_run_compiler.bzl  valdi_test.bzl  valdi_toolchain.bzl
compiler/companion/: webpack.config.js
compiler/compiler/: .gitignore  BUILD.bazel  README.md  linux_static_link_shims.cpp  valdi.proto
descriptive-text-presentation/: package.json
descriptive-text-presentation/src/: App.js
docs/: INSTALL.md  README.md
docs/api/: api-quick-reference.md  api-reference-elements.md  api-style-attributes.md
docs/docs/: advanced-localization.md  advanced-protobuf.md  ai-tooling.md  choosing-valdi.md  command-line-references.md  core-component.md  core-events.md  core-flexbox.md  core-images.md  core-module.md  core-scrolls.md  core-slots.md  core-states.md  core-styling.md  core-text.md  core-video.md  core-views.md  faq.md  help-troubleshooting.md  internals-api-design.md  internals-compiler.md  internals-native-integration.md  internals-renderer.md  internals-runtime.md  migrate-from-compose.md  migrate-from-flutter.md  native-annotations.md  native-bindings.md  native-collectionview.md  native-customviews.md  native-polyglot.md  native-types.md  native-view-model.md  on-render.md  performance-optimization.md  performance-tracing.md  performance-view-recycling.md  start-about.md  start-from-react.md  start-introduction.md  (+5 more)
docs/setup/: linux_setup.md  macos_setup.md
experiments/helloworld_playground/: BUILD.bazel  jest.config.js  package.json  tsconfig.json
experiments/helloworld_playground/playground/: index.html  main.ts  setup.ts  webpack.config.js  webpack.hmr.config.js
experiments/helloworld_playground/playground/pages/: hello.ts
experiments/helloworld_playground/tests/: hello.integration.test.js  run_tests.js  test_config.json
libs/image_toolbox/: BUILD.bazel
libs/utils/: BUILD.bazel
npm_modules/cli/: .gitignore  LINUX_COMPATIBILITY.md  README.md  package-lock.json  package.json
outfit-website/: package.json
outfit-website/app/: page.tsx
scripts/: linux_deps_setup.sh  mac_deps_setup.sh
snap_drawing/: BUILD.bazel
src/: BUILD.bazel
src/valdi_modules/src/valdi/valdi_webview/: BUILD.bazel  module.yaml
src/valdi_modules/src/valdi/valdi_webview/android/: WebViewNativeModuleFactoryImpl.kt
src/valdi_modules/src/valdi/valdi_webview/android/com/snap/valdi/modules/webview/: AndroidWebViewHolder.kt  ValdiWebView.kt  ValdiWebViewAttributesBinder.kt  WebViewControllerImpl.kt
src/valdi_modules/src/valdi/valdi_webview/ios/: SCValdiWKWebViewHolder.h  SCValdiWKWebViewHolder.m  SCValdiWebView.h  SCValdiWebView.m  SCValdiWebViewControllerImpl.h  SCValdiWebViewControllerImpl.m  SCValdiWebViewNativeModule.m
src/valdi_modules/src/valdi/valdi_webview/macos/: SCValdiWebView.h  SCValdiWebView.m
src/valdi_modules/src/valdi/valdi_webview/src/: WebView.ts  WebViewNative.d.ts
tools/ci/: bazel_build.sh  bazel_gcs_credential_helper.sh  build_core_targets.sh  release_test.sh  run_tests.sh  setup_linux_env.sh  test_exported_lib.sh  test_workflow_locally.sh
valdi/: BUILD.bazel
valdi/bzl/: BUILD.bazel
valdi_core/: BUILD.bazel
valdi_protobuf/: BUILD.bazel
valdi_protobuf/src/valdi_protobuf/: DescriptorDatabase.cpp  DescriptorDatabase.hpp
valdi_protobuf/src/valdi_protobuf/protos/: DescriptorIndex.proto
valdi_protobuf/test/: DescriptorDatabase_tests.cpp
videos/: browser_session_1763113363819.webm
(+799 files in other folders)
