load("@protobuf_cpp//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf_cpp//bazel:proto_library.bzl", "proto_library")
load("//bzl:valdi_library.bzl", "COMMON_COMPILE_FLAGS")

COMPILER_FLAGS = COMMON_COMPILE_FLAGS + [
    "-Wno-gcc-compat",
    "-fno-exceptions",
]

cc_library(
    name = "valdi_protobuf",
    srcs = glob([
        "src/valdi_protobuf/**/*.cpp",
        "src/valdi_protobuf/**/*.hpp",
    ]),
    hdrs = glob([
        "src/valdi_protobuf/**/*.hpp",
    ]),
    copts = COMPILER_FLAGS,
    strip_include_prefix = "src",
    visibility = ["//visibility:public"],
    deps = [
        ":index_proto",
        "//libs/utils:utils_core_cc",
        "//libs/utils:utils_encoding_cc",
        "//valdi_core:valdi_core_cc",
        "@protobuf_cpp//:protobuf",
    ],
    alwayslink = False,
)

cc_library(
    name = "index_proto",
    deps = [":descriptor_index_cc_proto"],
)

proto_library(
    name = "descriptor_index_proto",
    srcs = ["src/valdi_protobuf/protos/DescriptorIndex.proto"],
    strip_import_prefix = "src",
)

cc_proto_library(
    name = "descriptor_index_cc_proto",
    deps = [":descriptor_index_proto"],
)

cc_library(
    name = "test_proto",
    testonly = 1,
    deps = [":test_cc_proto"],
)

proto_library(
    name = "test_proto_src",
    testonly = 1,
    srcs = ["test/proto/test.proto"],
    import_prefix = "protogen",
    strip_import_prefix = "test/proto",
)

cc_proto_library(
    name = "test_cc_proto",
    testonly = 1,
    visibility = ["//visibility:public"],
    deps = [":test_proto_src"],
)

cc_test(
    name = "test",
    srcs = glob(["test/**/*.cpp"]),
    linkstatic = 1,
    deps = [
        ":test_proto",
        ":valdi_protobuf",
        "@gtest//:gtest_main",
    ],
)

cc_binary(
    name = "benchmark",
    testonly = 1,
    srcs = glob([
        "src/benchmark/*.cpp",
    ]),
    linkstatic = True,
    tags = ["manual"],  # Source uses outdated Message::parse API
    deps = [
        ":test_proto",
        ":valdi_protobuf",
        "@com_github_google_benchmark//:benchmark",
    ],
)
