load("//bzl/valdi:valdi_module.bzl", "valdi_module")

valdi_module(
    name = "tests",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
        "test/**/*.ts",
        "test/**/*.tsx",
    ]) + [
        "tsconfig.json",
    ],
    android_output_target = "debug",
    ios_module_name = "SCCValdiCompTestRef",
    ios_output_target = "debug",
    visibility = ["//visibility:public"],
    deps = [
        "//src/valdi_modules/src/valdi/foundation",
        "//src/valdi_modules/src/valdi/jasmine",
        "//src/valdi_modules/src/valdi/valdi_core",
        "//src/valdi_modules/src/valdi/valdi_test",
        "//src/valdi_modules/src/valdi/valdi_tsx",
    ],
)
