load("//bzl/valdi:valdi_module.bzl", "valdi_module")

valdi_module(
    name = "tests",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
        "output/**/*.ts",
        "output/**/*.tsx",
    ]) + [
        "tsconfig.json",
    ],
    android_output_target = "release",
    ios_module_name = "SCCValdiMigrateTest",
    ios_output_target = "release",
    visibility = ["//visibility:public"],
    deps = [
        "//src/valdi_modules/src/valdi/persistence",
        "//src/valdi_modules/src/valdi/valdi_core",
        "//src/valdi_modules/src/valdi/valdi_http",
        "//src/valdi_modules/src/valdi/valdi_tsx",
    ],
)
