objc_library(
    name = "native_module_ios",
    srcs = glob([
        "**/*.m",
    ]),
    hdrs = [],
    copts = ["-I."],
    target_compatible_with = ["@platforms//os:ios"],
    visibility = ["//visibility:public"],
    deps = [
        "//apps/benchmark/src/valdi/benchmark:benchmark_api_objc",
    ],
)
