load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("//bzl/valdi:valdi_module.bzl", "valdi_module")

ts_project(
    name = "hello_world_web",
    srcs = glob([
        "web/**/*.ts",
        "src/**/*.d.ts",
    ]),
    allow_js = True,
    composite = True,
    declaration = True,
    transpiler = "tsc",
    tsconfig = "web/tsconfig.json",
)

valdi_module(
    name = "hello_world",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
    ]) + [
        "tsconfig.json",
    ],
    android_class_path = "com.snap.valdi.modules.hello_world",
    android_deps = ["//apps/helloworld/src/android:native_module_android"],
    android_output_target = "release",
    ios_deps = ["//apps/helloworld/src/ios:native_module_ios"],
    ios_language = [
        "objc",
        "swift",
    ],
    ios_module_name = "SCCHelloWorld",
    ios_output_target = "release",
    native_deps = ["//apps/helloworld/src/cpp:native_module_cpp"],
    res = glob([
        "res/**/*.jpeg",
        "res/**/*.jpg",
        "res/**/*.png",
        "res/**/*.svg",
        "res/**/*.webp",
    ]),
    visibility = ["//visibility:public"],
    web_deps = [":hello_world_web"],
    web_register_native_module_id_overrides = {
        "hello_world/web/CppModule.js": "hello_world/src/CppModule",
        "hello_world/web/NativeModule.js": "hello_world/src/NativeModule",
    },
    deps = [
        "//src/valdi_modules/src/valdi/valdi_core",
        "//src/valdi_modules/src/valdi/valdi_tsx",
    ],
)
